# iphone_local_backup

./: .gitignore  build.py  main.py  pyproject.toml
src/: __init__.py
src/backend/: __init__.py  device_manager.py  models.py  photo_analyzer.py  photo_transfer.py
src/core/: config.py  settings_manager.py  utils.py
src/frontend/: __init__.py  main_window.py
src/frontend/components/: __init__.py  device_selector.py  photo_tree.py  progress_panel.py  stats_panel.py
